k8s/inventory-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-management
spec:
  selector:
    app: inventory-management
  ports:
    - port: 8081
      name: web
