k8s/inventory-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-management
  labels:
    name: inventory-management
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/inventory-management'
            backend:
              service:
                name: inventory-management
                port:
                  number: 8081
